--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,16 @@ dependencies:
   hive: ^2.2.3
   go_router: ^14.2.7
   path_provider: ^2.1.4
+  camera: ^0.11.0+2
+  easy_localization: ^3.0.7
+  permission_handler: ^11.3.1
+  file_picker: any
+  cached_network_image: ^3.4.1
+  flutter_svg: ^2.0.10+1
+  lottie: ^3.1.2
+  flutter_secure_storage: ^9.2.2
+  fluttertoast: ^8.2.8
+  get_it: ^7.7.0
 
 dev_dependencies:
   flutter_test:
